force-app/main/default/objects/gmpkg__Bulk_Action_Error__c/gmpkg__Bulk_Action_Error__c.object-meta.xml
<CustomObject>
    <label>Bulk Action Error</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bulk Action Errors</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>