force-app/main/default/objects/gmpkg__Bulk_Action_Error__c/fields/gmpkg__Error_Message__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Error_Message__c</fullName>
    <label>Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>