force-app/main/default/objects/gmpkg__Bulk_Action_Error__c/fields/gmpkg__Job__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__Job__c</fullName>
    <label>Job</label>
    <referenceTo>gmpkg__Bulk_Action_Job__c</referenceTo>
    <relationshipLabel>Bulk Action Errors</relationshipLabel>
    <relationshipName>Bulk_Action_Errors</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>