force-app/main/default/objects/gmpkg__Bulk_Action_Error__c/fields/gmpkg__RecordId__c.field-meta.xml
<CustomField>
    <fullName>gmpkg__RecordId__c</fullName>
    <label>Record Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>